# XED_group9

./: .gitignore  PEFT_Tutorial.ipynb  README.md  config.yaml  huggingface_guide.ipynb  main.py  preprocessing.py  pyproject.toml  python_batch.sh  python_test_model.sh  python_train.sh  requirements.txt  slurm-22794219.out  slurm-22794650.out  slurm-23031222.out  slurm-24732510.out  slurm-24823582.out  slurm-24823826.out  slurm-24958729.out  slurm-24958732.out  test_model.py  train_lora_llm.py  train_peft_llm_emotions.py
LLMenv/: pyvenv.cfg
habrok_outputs/: slurm-23041690.out  slurm-23311402.out  slurm-23339285.out  slurm-23376369.out  slurm-23376992.out  slurm-23547088.out  slurm-23549673.out  slurm-24721978.out  slurm-24732450.out  slurm-24753257.out  slurm-24754285.out  slurm-24755051.out  slurm-24755066.out  slurm-24756819.out  slurm-24758964.out  slurm-24808643.out  slurm-24808902.out
jobs/: main.sh  python_eval_model.sh  python_test_model.sh  python_train.sh  python_train_lora.sh  python_train_prompting.sh
logs/: lora_mistral_24933056.out  lora_mixtral_24965570.err  lora_mixtral_24965570.out  lora_mixtral_25031953.err  lora_mixtral_25031953.out  lora_mixtral_25076806.err  lora_mixtral_25076806.out  ministral_8b_combined_25086728.err  ministral_8b_combined_25086728.out  ministral_8b_en_25092555.err  ministral_8b_en_25092555.out  ministral_8b_hu_25093180.err  ministral_8b_hu_25093180.out  ministral_8b_nl_25092853.err  ministral_8b_nl_25092853.out  ministral_8b_ro_25092709.err  ministral_8b_ro_25092709.out  prompting_24932727.err  prompting_24932727.out  (+6 more)
(+46 files in other folders)
