[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Large language model finetuning"
version = "0.0.1"
description = "This project contains code for finetuning large language models for classifying emotion in movie subtitles
authors = [
  { name = "Joel Boer" },
  { name = "Marcel"},
  { name = "Bogdan"}
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.5"
dependencies = [
    "basedpyright>=1.31.7",
    "numpy>=2.3.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]

[tool.ruff]
line-length = 99
src = ["pipeline"]
include = ["pyproject.toml", "pipeline/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]
force-sort-within-sections = true
